Fix regression from CVE-2021-3693

--- a/UI/payments/payments_detail.html
+++ b/UI/payments/payments_detail.html
@@ -484,6 +484,7 @@
                 <?lsmb INCLUDE select element_data = {
                         name    = "format"
                         class   = "select"
+                        default_blank = 1
                         options = payment.format_options
                         value   = payment.format
                 } ?>
